# backend/controllers/usuariosController.js
@@ -116,14 +116,6 @@ const disableUser = (req, res) => {
   }
 };
 
-buscarUsuarioPorEmail = (emailCliente) => {
-  const usuario = usuarios.find(u => u.email == emailCliente);
-  if (!usuario) {
-    throw new Error('Usuario no encontrado');
-  }
-  return usuario;
-};
-
 module.exports = {
   register,
   update,
@@ -132,5 +124,4 @@ module.exports = {
   forgotPassword,
   enableUser,
   disableUser,
-  buscarUsuarioPorEmail
 };
